// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'attributes' option should handle attributes with a "boolean" notation equals "true" 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./image.png\\");
// Exports
module.exports = \\"Text <script src=\\\\\\"script.js\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\">\\";"
`;

exports[`'attributes' option should ignore hash fragments in URLs 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./icons.svg\\");
// Exports
module.exports = \\"<img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"#hash\\\\\\">\\";"
`;

exports[`'attributes' option should ignore some anchor by default in attributes 1`] = `
"// Exports
module.exports = \\"<a href=\\\\\\"mailto:username@exampledomain.com\\\\\\"></a>\\";"
`;

exports[`'attributes' option should not handle attributes with a "boolean" notation equals "false" 1`] = `
"// Exports
module.exports = \\"Text <script src=\\\\\\"script.js\\\\\\"><img src=\\\\\\"image.png\\\\\\">\\";"
`;

exports[`'attributes' option should work by default 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./image.png\\");
var ___HTML_LOADER_IDENT_1___ = require(\\"bootstrap-img\\");
var ___HTML_LOADER_IDENT_2___ = require(\\"./image.png\\");
// Exports
module.exports = \\"Text <img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_1___) + \\"\\\\\\"> Text <img src=\\\\\\"\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_2___) + \\"\\\\\\">\\";"
`;

exports[`'attributes' option should work by default with ES module syntax 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
import ___HTML_LOADER_IDENT_0___ from \\"./image.png\\";
import ___HTML_LOADER_IDENT_1___ from \\"bootstrap-img\\";
import ___HTML_LOADER_IDENT_2___ from \\"./image.png\\";
// Exports
export default \\"Text <img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_1___) + \\"\\\\\\"> Text <img src=\\\\\\"\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_2___) + \\"\\\\\\">\\";"
`;

exports[`'attributes' option should work with a "string" notation 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./script.js\\");
// Exports
module.exports = \\"Text <script src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\"><img src=\\\\\\"image.png\\\\\\">\\";"
`;

exports[`'attributes' option should work with a custom attribute 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./image1.png\\");
var ___HTML_LOADER_IDENT_1___ = require(\\"./image2.png\\");
// Exports
module.exports = \\"Text <custom-element custom-src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\"><custom-img custom-src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_1___) + \\"\\\\\\"/></custom-element>\\";"
`;

exports[`'attributes' option should work with an "array" notations 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./image.png\\");
// Exports
module.exports = \\"Text <script src=\\\\\\"script.js\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\">\\";"
`;

exports[`'attributes' option should work with multiple a "string" notations 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./script.js\\");
var ___HTML_LOADER_IDENT_1___ = require(\\"./image.png\\");
// Exports
module.exports = \\"Text <script src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_1___) + \\"\\\\\\">\\";"
`;

exports[`'attributes' option should work with multiple an "array" notations 1`] = `
"// Imports
function __url__(url) { return url.__esModule ? url.default : url; }
var ___HTML_LOADER_IDENT_0___ = require(\\"./script.js\\");
var ___HTML_LOADER_IDENT_1___ = require(\\"./image.png\\");
// Exports
module.exports = \\"Text <script src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_0___) + \\"\\\\\\"><img src=\\\\\\"\\" + __url__(___HTML_LOADER_IDENT_1___) + \\"\\\\\\">\\";"
`;
